added wrapper class, main only handles parameters now. i also added parameter, that only those thumbnails are written, where an edb entry exists

--- a/win7/Makefile
+++ b/win7/Makefile
@@ -14,6 +14,7 @@ OBJPATH=./obj/
 
 objects= \
 		 $(OBJPATH)edbHandler.o\
+		 $(OBJPATH)thumbWriter.o\
 		 $(OBJPATH)texMaker.o\
 		 $(OBJPATH)xmlMaker.o\
 		 $(OBJPATH)imageCarver.o\
