filewriter added, everything adapted

--- a/win7/Makefile
+++ b/win7/Makefile
@@ -15,6 +15,7 @@ OBJPATH=./obj/
 objects= \
 		 $(OBJPATH)edbHandler.o\
 		 $(OBJPATH)thumbWriter.o\
+		 $(OBJPATH)fileWriter.o\
 		 $(OBJPATH)texMaker.o\
 		 $(OBJPATH)xmlMaker.o\
 		 $(OBJPATH)imageCarver.o\
