some threaded, adapted xml and tex output - order is reversed, big pictures at first, some vspace and hspace added so that the output doesnt look too heavy like shit

--- a/win7/Makefile
+++ b/win7/Makefile
@@ -31,7 +31,7 @@ pathmaker:
 	mkdir -p obj/ bin/
 
 thumb: ./thumby/main.cpp
-	$(CC) $(OPT) thumby/main.cpp -o bin/thumbCV
+	$(CC) $(OPT) thumby/main.cpp -o bin/thumbCV && echo '' && echo '' && echo "Real thumby compilation now" && echo ''
 
 exe: $(objects) $(MAIN)
 	$(CC) $(OPT) $(INC) $(LIBS) -o $(BINPATH)runme $(objects) $(MAIN)
